4/deplsrv.yaml
apiVersion: v1
kind: Service
metadata:
  name: artdep
  labels:
    app: artdeploy
spec:
  selector:
    app: artdeploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
