4/artingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: artdep
             port: 
                number: 80
